# TsingYun_Tutorial_Vision-Aiming

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  schema.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint_and_build.yml  regenerate_leaderboard.yml  validate_submission.yml
HW1_armor_detector/: CMakeLists.txt  README.md  proto  pyproject.toml
HW1_armor_detector/data/: camera_intrinsics.yaml  dataset_dumper.py  domain_randomization.yaml
HW1_armor_detector/data/real_holdout/: README.md
HW1_armor_detector/include/aiming_hw/detector/: inferer.hpp  post_process.hpp
HW1_armor_detector/source/: inferer.cpp  main_smoke.cpp  post_process.cpp
HW1_armor_detector/src/: export_onnx.py  losses.py  model.py  train.py
HW1_armor_detector/tests/public/: test_assign_targets.py  test_export_roundtrip.py  test_loss_shapes.py  test_post_process.cpp
HW2_tf_graph/: CMakeLists.txt  README.md
HW2_tf_graph/include/aiming_hw/tf/: buffer.hpp  interpolate.hpp  transform.hpp
HW2_tf_graph/source/: buffer.cpp  interpolate.cpp
HW2_tf_graph/tests/public/: test_basic_lookup.cpp  test_chain_compose.cpp  test_interpolation_corners.cpp
HW3_ekf_tracker/: CMakeLists.txt  README.md  pyproject.toml
HW3_ekf_tracker/docs/: ekf_derivation.md
HW3_ekf_tracker/include/aiming_hw/ekf/: data_association.hpp  imm.hpp  kalman_step.hpp  motion_models.hpp  tracker.hpp
HW3_ekf_tracker/reference/: ekf_python.py  generate_fixtures.py
HW3_ekf_tracker/source/: data_association.cpp  imm.cpp  kalman_step.cpp  motion_models.cpp  tracker.cpp
HW3_ekf_tracker/tests/fixtures/: traj_high_maneuver.csv  traj_low_maneuver.csv  traj_med_maneuver.csv
HW3_ekf_tracker/tests/public/: test_cv_predict.cpp  test_da_simple.cpp  test_imm_mode_probabilities.cpp
HW4_ballistic/: CMakeLists.txt  README.md
HW4_ballistic/include/aiming_hw/ballistic/: projectile_model.hpp  solver.hpp
HW4_ballistic/source/: projectile_model.cpp  solver.cpp
HW4_ballistic/tests/public/: test_1d_no_drag.cpp  test_2d_with_gravity.cpp  test_3d_with_drag.cpp
HW5_mpc_gimbal/: CMakeLists.txt  README.md  pyproject.toml
HW5_mpc_gimbal/configs/: mpc_weights.yaml
HW5_mpc_gimbal/docs/: visual_review_2026-04-29.md
HW5_mpc_gimbal/generated_solver/: README.md
HW5_mpc_gimbal/include/aiming_hw/mpc/: controller.hpp  pid_baseline.hpp
HW5_mpc_gimbal/source/: controller.cpp  pid_baseline.cpp
HW5_mpc_gimbal/src/: cost.py  generate_acados.py  model.py  tune.py
HW5_mpc_gimbal/tests/public/: test_cost.py  test_sinusoid_tracking.cpp  test_step_response.cpp
HW6_integration/: CMakeLists.txt  README.md
HW6_integration/include/aiming_hw/pipeline/: ring_buffer.hpp  runner.hpp  watchdog.hpp
HW6_integration/source/: main.cpp  runner.cpp  watchdog.cpp
HW6_integration/tests/public/: test_ring_buffer.cpp  test_watchdog.cpp
HW7_strategy/: CMakeLists.txt  README.md  pyproject.toml
HW7_strategy/configs/: example_bt.yaml
HW7_strategy/include/aiming_hw/strategy/: behavior_tree.hpp  leaf_actions.hpp  strategy.hpp
HW7_strategy/source/: leaf_actions.cpp  strategy.cpp
HW7_strategy/src/: dsl_to_cpp.py  train_ppo.py
HW7_strategy/tests/public/: test_bt_semantics.cpp  test_priority_distance.cpp  test_retreat_trigger.cpp
docs/: CHANGELOG.md  architecture.md  assignment-redesign.md  cleanup-roadmap.md  godot_arena.md  grading.md  oss_assets.md  training-rl.md  unity-wire-contract.md
docs/superpowers/plans/: 2026-04-30-arena-art-vision-reform-stage12.md  2026-05-01-stage12c-lean-visual-plan.md  2026-05-02-milestone3-unity-first-assignment-redesign.md  2026-05-02-milestone5-visual-effects.md  2026-05-02-training-rl-visual-milestone-split.md
docs/superpowers/specs/: 2026-04-30-arena-art-vision-reform-design.md  2026-05-01-stage12c-lean-visual-design.md  2026-05-02-milestone5-visual-effects-design.md
shared/assets/: manifest.toml
shared/cmake/: ProtoTargets.cmake  UvFetch.cmake
shared/docker/: README.md  toolchain.Dockerfile  toolchain.compose.yaml
shared/godot_arena/: README.md  default_env.tres  export_presets.cfg  icon.svg.import  project.godot
shared/godot_arena/addons/godot_rl_agents/: README.md
shared/godot_arena/addons/grpc_gd/: README.md
shared/godot_arena/assets/: README.md
shared/godot_arena/scenes/: arena_main.tscn  armor_plate.tscn  chassis.tscn  gimbal.tscn  projectile.tscn
shared/godot_arena/scripts/: arena_main.gd  arena_main.gd.uid  armor_plate.gd  armor_plate.gd.uid  chassis.gd  chassis.gd.uid  gimbal.gd  gimbal.gd.uid  projectile.gd  projectile.gd.uid  replay_recorder.gd  replay_recorder.gd.uid  seed_rng.gd  seed_rng.gd.uid  sticker_loader.gd  tcp_frame_pub.gd  tcp_frame_pub.gd.uid  tcp_proto_server.gd  tcp_proto_server.gd.uid
shared/grpc_stub_server/: pyproject.toml
shared/grpc_stub_server/src/grpc_stub_server/: __init__.py  __main__.py  proto_codegen.py  server.py
shared/proto/: aiming.proto  episode.proto  sensor.proto
shared/scripts/: fetch_assets.py  push_assets.py
shared/unity_arena/: README.md
shared/unity_arena/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  Physics2DSettings.asset  ProjectSettings.asset  TagManager.asset  TimeManager.asset
shared/zmq_frame_pub/: pyproject.toml
shared/zmq_frame_pub/src/zmq_frame_pub/: __init__.py  __main__.py  publisher.py
tests/: CMakeLists.txt  bronze_regression.py  intra_unity_damage_baseline.json  intra_unity_damage_regression.py  intra_unity_determinism.py  proto_roundtrip_test.cpp  test_arena_wire_format.py  test_assignment_design.py  test_assignment_mini_commands.py  test_fetch_assets.py  test_godot_wire_format.py  test_rl_training_client.py
tools/: __init__.py
tools/leaderboard/: aggregate.py  score_pr.py
tools/rl/: __init__.py  aiming_env.py  random_policy_smoke.py  unity_training_client.py
tools/scripts/: check_synty_redistribution.py  compare_golden_frames.py  extract_mnist_stickers.py  render_golden_frames.py  smoke_arena.py  smoke_godot_arena.py
(+79 files in other folders)
