[project]
name = "aiming-hw1-detector"
version = "0.7.0"
description = "HW1 — Lightweight armor & icon detector. Candidates fill the TODOs in src/train.py."
requires-python = ">=3.11"
license = "MIT"

# Stage 3 keeps PyTorch optional at install-time so the rest of the
# repo's pytest run (Stage 1 + Stage 2 conformance tests) doesn't pull a
# multi-GB CUDA wheel just to lint. Candidates pick this group up via
# `uv sync --group hw1`. Public unit tests skip themselves when torch is
# missing — see HW1_armor_detector/tests/public/test_loss_shapes.py.
dependencies = [
    "numpy>=1.26",
    "pillow>=10.2",
    "pyyaml>=6.0",
]

[dependency-groups]
hw1 = [
    "torch>=2.2",
    "torchvision>=0.17",
    "onnx>=1.16",
    "onnxruntime>=1.17",
    "tqdm>=4.66",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501", "N806"]  # N806 = uppercase locals (math notation)
