[project]
name = "aiming-hw3-ekf"
version = "0.9.0"
description = "HW3 — EKF + IMM tracker. Python reference + fixture generator."
requires-python = ">=3.11"
license = "MIT"

# The C++ side is the assignment; Python here is the math reference
# in reference/ekf_python.py and the trajectory generator. Both need
# numpy + scipy. Kept in an opt-in 'hw3' uv group so the rest of the
# repo's pytest doesn't pull scipy when it isn't needed.
dependencies = [
    "numpy>=1.26",
]

[dependency-groups]
hw3 = [
    "scipy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"
