[project]
name = "aiming-hw7-strategy"
version = "1.3.0"
description = "HW7 — strategy bonus. Behaviour-tree DSL codegen + optional PPO scaffold."
requires-python = ">=3.11"
license = "MIT"

# DSL codegen + PPO trainer. The C++ side does not depend on Python
# at runtime; this package is for offline policy training and the
# YAML → C++ codegen step.
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[dependency-groups]
hw7 = [
    "torch>=2.2",
    "tqdm>=4.66",
    # sample-factory is heavy and platform-finicky; the candidate's
    # stretch goal of using its parallel rollout workers is a manual
    # `pip install sample-factory` rather than a hard dep here.
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501", "N806"]
