[project]
name = "zmq-frame-pub"
version = "0.5.0"
description = "Synthetic 720p RGB frame publisher used for HW1+ stages before the Godot arena exists"
requires-python = ">=3.11"

dependencies = [
    "pyzmq>=25.1",
    "numpy>=1.26",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
aiming-frame-pub = "zmq_frame_pub.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zmq_frame_pub"]
